--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Build
       run: |
         dotnet build \
-        --configuration Release
+        --configuration Release \
         --output ./bin
 
     - name: Test
